# lcf-strain-life

./: .claudeignore  .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  Goal.md  LICENSE  MEMORY.md  README.md  RELEASING.md  SECURITY.md  Working notes to implement.md  llms.txt  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: docs.yml  pages.yml  publish.yml  tests.yml
docs/: AGENT_USAGE.md  CONTRIBUTING-DATA.md  INTERCHANGE.md  PHYSICS_REVIEW.md  PHYSICS_REVIEW.tex  SCIENTIFIC_REFERENCE.md  api.md  data.md  index.md  installation.md  physics.md  statistics.md  theory.md  usage.md
docs/data/: seed_collection.json
docs/decisions/: 0001-package-architecture.md  0002-true-stress-strain.md  0003-cycle-detection.md  0004-failure-criterion.md  0005-fitting-methodology.md  0006-mean-stress-correction.md  0007-persistence.md  0008-mcp-sdk.md  0009-review-hardening.md  0010-phase2-engineering-layer.md  0011-in-house-rainflow.md  0012-currency-flags.md  README.md
docs/design/: DEEP_RESEARCH_PROMPT.md  DEEP_RESEARCH_PROMPT_PHASE2.md  IMPLEMENTATION_REFERENCE.md  IMPLEMENTATION_REFERENCE_PHASE2.md  WORKFLOW.md  working-notes.md
docs/reference/: Equations_and_Labels.md  LCF_Analysis_Notes.md  LCF_Physics.tex
docs/schemas/: collection.v1.schema.json  material.v1.schema.json  test-record.v1.schema.json
docs/tutorials/: sae1137.md
examples/: csv_ingestion_demo.py  strain_life_demo.py  validate_sae_conle.py  validate_sae_keyhole.py  variable_amplitude_sae.py
memory/: input-compat-pylife-pyfatigue.md  project-scope-lcf-automation.md  use-true-stress-strain.md  writing-style.md
scripts/: build_gui_app.py  gui_entry.py
src/lcf/: __init__.py  __main__.py  citations.py  counting.py  criticalplane.py  cycles.py  cyclic_evolution.py  damage.py  datasets.py  energy.py  estimate.py  fits.py  hightemp.py  ingest.py  interchange.py  labio.py  life.py  mcp_server.py  meanstress.py  metrics.py  models.py  multiaxial.py  notch.py  pipeline.py  plots.py  report.py  rfl.py  schema.py  service.py  simulate.py  spectrum.py  staircase.py  stats.py  store.py  surface.py  units.py  validate_cli.py
src/lcf/gui/: __init__.py  app.py  core.py
tests/: conftest.py  test_adapters_integration.py  test_citations.py  test_counting.py  test_counting_extensions.py  test_cycles.py  test_cyclic_evolution.py  test_damage.py  test_datasets_seed.py  test_docs_math.py  test_energy.py  test_estimate.py  test_fits.py  test_gui.py  test_hightemp.py  test_ingest.py  test_interchange_formats.py  test_labio.py  test_life.py  test_mcp_server.py  test_meanstress.py  test_metrics.py  test_multiaxial.py  test_notch.py  test_outliers.py  test_p4_p5.py  test_phase2_review.py  test_pipeline.py  test_plots.py  test_rfl.py  test_service.py  test_service_exposure.py  test_service_phase2.py  test_simulate.py  test_spectrum.py  test_staircase.py  test_stats.py  test_stats_ml.py  test_store.py  test_surface.py  (+2 more)
tests/data/: laminate_panel.csv
website/: get-started.html  index.html
website/assets/: app.js  style.css
