[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcf-strain-life"
version = "0.1.0"
description = "Material-agnostic Low Cycle Fatigue (LCF) strain-life analysis: core library + MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David Fieser", email = "dfieser9@gmail.com" }]
keywords = ["fatigue", "low-cycle-fatigue", "strain-life", "materials", "mcp", "coffin-manson", "basquin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "pyarrow>=15",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.27,<2"]
dev = ["pytest>=8"]

[project.scripts]
lcf-mcp = "lcf.mcp_server:main"

[project.urls]
Homepage = "https://github.com/dfieser/lcf-strain-life"
Documentation = "https://github.com/dfieser/lcf-strain-life/tree/main/docs"
Repository = "https://github.com/dfieser/lcf-strain-life"

[tool.hatch.build.targets.wheel]
packages = ["src/lcf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
