[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcf-strain-life"
dynamic = ["version"]
description = "Material-agnostic Low Cycle Fatigue (LCF) strain-life analysis: core library + MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "David Fieser", email = "dfieser9@gmail.com" },
    { name = "Hugh Shortt" },
]
keywords = ["fatigue", "low-cycle-fatigue", "strain-life", "materials", "mcp", "coffin-manson", "basquin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "pyarrow>=15",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.27,<2"]
gui = ["streamlit>=1.49"]
dev = ["pytest>=8"]

[project.scripts]
lcf-mcp = "lcf.mcp_server:main"
lcf-gui = "lcf.gui:main"

[project.urls]
Homepage = "https://github.com/dfieser/lcf-strain-life"
Documentation = "https://github.com/dfieser/lcf-strain-life#readme"
Repository = "https://github.com/dfieser/lcf-strain-life"
Changelog = "https://github.com/dfieser/lcf-strain-life/blob/main/CHANGELOG.md"
Issues = "https://github.com/dfieser/lcf-strain-life/issues"

# The version has one source of truth: __version__ in src/lcf/__init__.py.
# The release script in the maintainers' workspace bumps it and syncs
# CITATION.cff, and a test guards the two against drift.
[tool.hatch.version]
path = "src/lcf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lcf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
